# blaine

./: .gitignore  Blaine Battery.lnk
Blaine.Rust/: Cargo.toml  clap.yaml
Blaine.Rust/src/: 1main.rs  battery_monitor.rs  chaeyoung.rs  disks_meter.rs  failed_networks.rs  filepaths.rs  main.rs
